# thetafsir

./: .env  .gitattributes  agentic.py  main.py  maindb.sql  netlify.toml  pyproject.toml  render.yaml  requirements.txt
static/css/: auth.css  chat copy.css  chat.css  styles.css
static/js/: chat.js  moveButton.js  response-formatting.js  script.js
templates/: chat.html  contact.html  forgot-password.html  index.html  login.html  privacy.html  refundPolicy.html  register.html  reset-password.html  terms.html  termsConditions.html
tmp/chromadb/753bbe84-dd54-4a56-ae4e-3c1d4e685b90/: index_metadata.pickle
